--- a/mogmog.ipynb
+++ b/mogmog.ipynb
@@ -31,22 +31,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "048f75db",
    "metadata": {},
    "outputs": [
     {
-     "ename": "MethodError",
-     "evalue": "MethodError: no method matching logpdf_MOG()\nThe function `logpdf_MOG` exists, but no method is defined for this combination of argument types.\n\nClosest candidates are:\n  logpdf_MOG(!Matched::Float64, !Matched::Vector{Float64}, !Matched::Vector{Float64}, !Matched::Vector{Float64})\n   @ MOGMOG ~/.julia/dev/MOGMOG/src/pdf.jl:3\n",
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: `logpdf_MOG` not defined in `Main`\nSuggestion: check for spelling errors or missing imports.",
      "output_type": "error",
      "traceback": [
-      "MethodError: no method matching logpdf_MOG()\n",
-      "The function `logpdf_MOG` exists, but no method is defined for this combination of argument types.\n",
-      "\n",
-      "Closest candidates are:\n",
-      "  logpdf_MOG(!Matched::Float64, !Matched::Vector{Float64}, !Matched::Vector{Float64}, !Matched::Vector{Float64})\n",
-      "   @ MOGMOG ~/.julia/dev/MOGMOG/src/pdf.jl:3\n",
-      "\n",
+      "UndefVarError: `logpdf_MOG` not defined in `Main`\n",
+      "Suggestion: check for spelling errors or missing imports.\n",
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
