--- a/mogmog.ipynb
+++ b/mogmog.ipynb
@@ -52,6 +52,41 @@
    "source": [
     "logpdf_MOG()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b5f1edd8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using LinearAlgebra, Random\n",
+    "\n",
+    "function ran_rot_matrix()\n",
+    "    ϕ = rand()*2π #x\n",
+    "    θ = rand()*2π #y\n",
+    "    ψ = rand()*2π #z\n",
+    "    \n",
+    "    R_x = [1 0 0; 0 cos(ϕ) -sin(ϕ); 0 sin(ϕ) cos(ϕ)]\n",
+    "    R_y = [cos(θ) 0 sin(θ); 0 1 0; -sin(θ) 0 cos(θ)]\n",
+    "    R_z = [cos(ψ) -sin(ψ) 0; sin(ψ) cos(ψ) 0; 0 0 1]     \n",
+    "    \n",
+    "    R = R_z * R_y * R_x\n",
+    "    return R\n",
+    "end\n",
+    "\n",
+    "function ran_transform()\n",
+    "    t = rand(-1000:1000)\n",
+    "    T = [1 0 0 t; 0 1 0 t; 0 0 1 t; 0 0 0 1]\n",
+    "    return T\n",
+    "end"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b550b5cd",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
