--- a/mogmog.ipynb
+++ b/mogmog.ipynb
@@ -75,9 +75,8 @@
     "    return R\n",
     "end\n",
     "\n",
-    "function ran_transform()\n",
-    "    t = rand(-1000:1000)\n",
-    "    T = [1 0 0 t; 0 1 0 t; 0 0 1 t; 0 0 0 1]\n",
+    "function ran_translation()\n",
+    "    T = [I(3) rand(3); zeros(3)' 1]\n",
     "    return T\n",
     "end"
    ]
