Refactor MOGMOG model structure and training loop; enhance embedding functions and export loss function

--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -311,10 +311,119 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "id": "b550b5cd",
    "metadata": {},
-   "source": []
+   "outputs": [],
+   "source": [
+    "###foot\n",
+    "\n",
+    "# Parameters for the MOGMOG model\n",
+    "const rff_dim = 32               # Random Fourier feature dimension\n",
+    "const embed_dim = 64             # Final transformer input dim\n",
+    "const vocab_size = 10            # Number of atom types (incl. STOP)\n",
+    "\n",
+    "# -- Modules for the foot --\n",
+    "const RFF = RandomFourierFeatures(3 => rff_dim, 0.1f0)  # 3D input\n",
+    "const CoordProj = Dense(rff_dim => embed_dim, bias=false)\n",
+    "const AtomEmbed = Embedding(vocab_size, embed_dim)\n",
+    "###################################################################################3\n",
+    "\n",
+    "struct CoordEmbed \n",
+    "    mlp::Chain #this is a multi-layer perceptron (MLP)\n",
+    "end\n",
+    "\n",
+    "function CoordEmbed(embed_dim::Int)\n",
+    "    return CoordEmbed(Chain(\n",
+    "        Dense(3, embed_dim, relu),\n",
+    "        Dense(embed_dim, embed_dim)\n",
+    "    ))\n",
+    "end\n",
+    "\n",
+    "function (ce::CoordEmbed)(coords::Matrix{Float64})  # (3, L)\n",
+    "    return ce.mlp(coords')'  # Transpose for batch → return (embed_dim, L)\n",
+    "end \n",
+    "###################################################################################3\n",
+    "\n",
+    "function encode_prefix(positions::Matrix{Float64}, atom_types::Vector{Int}, ce::CoordEmbed, ae::Embedding)\n",
+    "    # positions: (3, L)\n",
+    "    # atom_types: (L,)\n",
+    "\n",
+    "    coord_embed = ce(positions)         # (embed_dim, L)\n",
+    "    type_embed = ae(atom_types)         # (embed_dim, L)\n",
+    "\n",
+    "    return coord_embed .+ type_embed    # Combine the two\n",
+    "end\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b06dbad2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "###TRAINING loop\n",
+    "\n",
+    "using Flux, JLD2, StatsBase, Random\n",
+    "\n",
+    "# Load processed molecules\n",
+    "@load \"processed_molecules.jld2\" result  # Loads `result::Vector{Molecule}`\n",
+    "\n",
+    "# Atom dictionary: atom => integer index\n",
+    "atom_dict = Dict(\"C\"=>1, \"O\"=>2, \"N\"=>3, \"H\"=>4, \"F\"=>5, \"STOP\"=>6)  # Customize this\n",
+    "\n",
+    "# Model\n",
+    "embed_dim = 64\n",
+    "n_components = 5\n",
+    "vocab_size = length(atom_dict)\n",
+    "model = MOGMOGModel(embed_dim, n_components, vocab_size)\n",
+    "\n",
+    "# Optimizer\n",
+    "opt_state = Flux.setup(AdamW(0.001), model)\n",
+    "\n",
+    "# Hyperparameters\n",
+    "nepochs = 10 # this is a small dataset, so we can train for more epochs\n",
+    "nbatches = 1000 # Number of batches per epoch\n",
+    "batchsize = 16 # Size of each batch\n",
+    "\n",
+    "# Training loop\n",
+    "for epoch in 1:nepochs\n",
+    "    @info \"Epoch $epoch\"\n",
+    "    shuffled = shuffle(result)\n",
+    "    total_loss = 0.0\n",
+    "\n",
+    "    for i in 1:nbatches\n",
+    "        mols = shuffled[(i-1)*batchsize+1:min(i*batchsize, end)]\n",
+    "        loss_batch = 0.0\n",
+    "\n",
+    "        grads = Flux.gradient(model) do m\n",
+    "            losses = Float32[]\n",
+    "            for mol in mols\n",
+    "                try\n",
+    "                    l = loss_fn(m, mol, atom_dict)\n",
+    "                    push!(losses, l)\n",
+    "                catch e\n",
+    "                    @warn \"Failed on molecule: $e\"\n",
+    "                end\n",
+    "            end\n",
+    "            loss_batch = mean(losses)\n",
+    "            return loss_batch\n",
+    "        end\n",
+    "\n",
+    "        Flux.update!(opt_state, model, grads[1])\n",
+    "        total_loss += loss_batch\n",
+    "\n",
+    "        if i % 50 == 0\n",
+    "            println(\"Batch $i, loss = $(round(loss_batch, digits=4))\")\n",
+    "        end\n",
+    "    end\n",
+    "\n",
+    "    println(\"Epoch $epoch done. Avg loss = $(round(total_loss / nbatches, digits=4))\")\n",
+    "end\n"
+   ]
   }
  ],
  "metadata": {
