Training not to lose

--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -367,7 +367,8 @@
    "source": [
     "###TRAINING loop\n",
     "\n",
-    "using Flux, JLD2, StatsBase, Random\n",
+    "using Flux, JLD2, StatsBase, Random, Plots\n",
+    "losses_over_time = Float32[]\n",
     "\n",
     "# Load processed molecules\n",
     "@load \"processed_molecules.jld2\" result  # Loads `result::Vector{Molecule}`\n",
@@ -410,6 +411,7 @@
     "                end\n",
     "            end\n",
     "            loss_batch = mean(losses)\n",
+    "            push!(losses_over_time, loss_batch)\n",
     "            return loss_batch\n",
     "        end\n",
     "\n",
@@ -422,7 +424,11 @@
     "    end\n",
     "\n",
     "    println(\"Epoch $epoch done. Avg loss = $(round(total_loss / nbatches, digits=4))\")\n",
-    "end\n"
+    "end\n",
+    "\n",
+    "plot(losses_over_time, xlabel=\"Batch\", ylabel=\"Loss\", label=\"Training Loss\", title=\"Final Loss Curve\")\n",
+    "savefig(\"final_loss_curve.png\")\n",
+    "# \n"
    ]
   }
  ],
