--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -386,36 +386,36 @@
     "opt_state = Flux.setup(AdamW(0.001), model)\n",
     "\n",
     "# Hyperparameters\n",
-    "nepochs = 10 # this is a small dataset, so we can train for more epochs\n",
-    "nbatches = 1000 # Number of batches per epoch\n",
-    "batchsize = 16 # Size of each batch\n",
+    "nepochs = 10 \n",
+    "nbatches = 1000 \n",
+    "batchsize = 16 \n",
     "\n",
     "# Training loop\n",
-    "for epoch in 1:nepochs\n",
+    "for epoch in 1:nepochs # Looks at the data 10 times \n",
     "    @info \"Epoch $epoch\"\n",
-    "    shuffled = shuffle(result)\n",
+    "    shuffled = shuffle(result) \n",
     "    total_loss = 0.0\n",
     "\n",
-    "    for i in 1:nbatches\n",
-    "        mols = shuffled[(i-1)*batchsize+1:min(i*batchsize, end)]\n",
+    "    for i in 1:nbatches # For every batch \n",
+    "        mols = shuffled[(i-1)*batchsize+1:min(i*batchsize, end)] # Take 16 molecules from the shuffled list \n",
     "        loss_batch = 0.0\n",
     "\n",
-    "        grads = Flux.gradient(model) do m\n",
+    "        grads = Flux.gradient(model) do m # Calculate all derivatives (gradients) of the model \n",
     "            losses = Float32[]\n",
-    "            for mol in mols\n",
+    "            for mol in mols # Calculate loss for every molecule \n",
     "                try\n",
     "                    l = loss_fn(m, mol, atom_dict)\n",
     "                    push!(losses, l)\n",
-    "                catch e\n",
+    "                catch e  \n",
     "                    @warn \"Failed on molecule: $e\"\n",
     "                end\n",
     "            end\n",
-    "            loss_batch = mean(losses)\n",
-    "            push!(losses_over_time, loss_batch)\n",
+    "            loss_batch = mean(losses) # Take the mean of the loss\n",
+    "            push!(losses_over_time, loss_batch) \n",
     "            return loss_batch\n",
     "        end\n",
     "\n",
-    "        Flux.update!(opt_state, model, grads[1])\n",
+    "        Flux.update!(opt_state, model, grads[1]) \n",
     "        total_loss += loss_batch\n",
     "\n",
     "        if i % 50 == 0\n",
@@ -428,7 +428,7 @@
     "\n",
     "plot(losses_over_time, xlabel=\"Batch\", ylabel=\"Loss\", label=\"Training Loss\", title=\"Final Loss Curve\")\n",
     "savefig(\"final_loss_curve.png\")\n",
-    "# \n"
+    "\n"
    ]
   }
  ],
