remove log messages, fix notebook

--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/MOGMOG.jl-1`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/.julia/dev/MOGMOG.jl`\n"
      ]
     }
    ],
@@ -36,23 +36,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "7821ad6e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1-element Vector{Symbol}:\n",
-       " :result"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "using Flux, JLD2, StatsBase, Random\n",
+    "using Flux, JLD2, Random\n",
     "\n",
     "struct Molecule\n",
     "    atoms::Vector{String}\n",
@@ -62,13 +51,13 @@
     "Base.length(mol::Molecule) = length(mol.atoms)\n",
     "\n",
     "# Load processed molecules\n",
-    "@load expanduser(\"~/processed_molecules.jld2\") result  # Loads `result::Vector{Molecule}`\n"
+    "# @load expanduser(\"~/processed_molecules.jld2\") result  # Loads `result::Vector{Molecule}`\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "7bdf5f7c",
+   "execution_count": 53,
+   "id": "72416c1a",
    "metadata": {},
    "outputs": [
     {
@@ -83,16 +72,43 @@
    ],
    "source": [
     "\n",
-    "atom_dict = Dict(\"C\"=>1, \"F\"=>2, \"H\"=>3, \"N\"=>4, \"O\"=>5, \"STOP\"=>6)\n",
+    "# Model\n",
+    "embed_dim = 64\n",
+    "n_components = 5\n",
+    "vocab_size = length(atom_dict)\n",
+    "model = MOGMOGModel(embed_dim, n_components, vocab_size, depth=4)\n",
+    "\n",
+    "# Optimizer\n",
+    "opt_state = Flux.setup(AdamW(0.001f0), model)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7bdf5f7c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pad_batch (generic function with 2 methods)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atom_dict = Dict(name => i for (i, name) in enumerate([\"C\", \"F\", \"H\", \"N\", \"O\", \"STOP\"]))\n",
     "PAD = atom_dict[\"STOP\"]\n",
     "vocab_size = length(atom_dict)\n",
     "\n",
     "# Pad function\n",
-    "function pad_batch(mols::Vector{Molecule}, atom_dict::Dict{String,Int})\n",
+    "function pad_batch(mols::Vector{Molecule})\n",
     "    max_len = maximum(length.(mols)) + 1  # Find the maximum length of molecules\n",
     "    B = length(mols)\n",
     "    atom_types = fill(PAD, max_len, B)\n",
-    "    coordinates = zeros(Float32, 3, max_len, B) .+ 10\n",
+    "    @show coordinates = zeros(Float32, 3, max_len, B) .+ 0\n",
     "    atom_type_mask = zeros(Float32, max_len - 1, B)\n",
     "    coordinate_mask = zeros(Float32, max_len - 1, B)\n",
     "\n",
@@ -106,64 +122,71 @@
     "        atom_type_mask[1:L, i] .= 1.0\n",
     "    end\n",
     "    return atom_types, coordinates, atom_type_mask, coordinate_mask\n",
-    "end\n",
-    "# Model\n",
-    "embed_dim = 64\n",
-    "n_components = 5\n",
-    "vocab_size = length(atom_dict)\n",
-    "model = MOGMOGModel(embed_dim, n_components, vocab_size, depth=4)\n",
-    "\n",
-    "# Optimizer\n",
-    "opt_state = Flux.setup(AdamW(0.001f0), model)\n"
+    "end"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "0cdfd741",
+   "execution_count": 39,
+   "id": "2c76d701",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5×4 Matrix{Float32}:\n",
-       "   1.0    1.0    1.0    1.0\n",
-       "   1.0    1.0    1.0    1.0\n",
-       "   1.0    1.0  100.0    1.0\n",
-       "   1.0  100.0  100.0  100.0\n",
-       " 100.0  100.0  100.0  100.0"
+       "6×2 Matrix{Int64}:\n",
+       " 1  1\n",
+       " 3  2\n",
+       " 3  1\n",
+       " 3  6\n",
+       " 3  6\n",
+       " 6  6"
       ]
      },
      "metadata": {},
      "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "pad_batch(result[1:4], atom_dict)[3]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 93,
-   "id": "0ddc697b",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "size(axis_embeddings) = (64, 3, 5, 4)\n",
-      "size(x) = (1, 3, 5, 4)\n",
-      "size(μ) = (5, 3, 5, 4)\n",
-      "size(σ) = (5, 3, 5, 4)\n",
-      "size(logw) = (5, 3, 5, 4)\n",
-      "size(logp_xyz) = (1, 3, 5, 4)\n"
-     ]
     },
     {
      "data": {
       "text/plain": [
-       "139.56188090991867"
+       "3×6×2 Array{Float32, 3}:\n",
+       "[:, :, 1] =\n",
+       "  0.158273   1.62107   1.8172    1.27361   0.828848  0.0\n",
+       "  1.18803   -1.0081    0.363998  1.05924  -0.846691  0.0\n",
+       " -0.484876  -1.13739  -1.07275   1.26865   1.18528   0.0\n",
+       "\n",
+       "[:, :, 2] =\n",
+       " -1.48635   -0.443743  1.24576   0.0  0.0  0.0\n",
+       " -0.355486  -0.140105  0.325522  0.0  0.0  0.0\n",
+       " -0.925501  -0.544627  0.782694  0.0  0.0  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5×2 Matrix{Float32}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  0.0\n",
+       " 1.0  0.0"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "5×2 Matrix{Float32}:\n",
+       " 1.0  1.0\n",
+       " 1.0  1.0\n",
+       " 1.0  0.0\n",
+       " 1.0  0.0\n",
+       " 0.0  0.0"
       ]
      },
      "metadata": {},
@@ -171,12 +194,17 @@
     }
    ],
    "source": [
-    "loss(model, pad_batch(result[1:4], atom_dict)...)"
+    "result = [\n",
+    "    Molecule([\"C\", \"H\", \"H\", \"H\", \"H\"], randn(5, 3)),\n",
+    "    Molecule([\"C\", \"F\", \"C\"], randn(3, 3)),\n",
+    "]\n",
+    "\n",
+    "pad_batch(result) .|> display;"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 69,
    "id": "7af4fafd",
    "metadata": {},
    "outputs": [
@@ -184,18 +212,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "size(axis_embeddings) = (64, 3, 5, 4)\n",
-      "size(x) = (1, 3, 5, 4)\n",
-      "size(μ) = (5, 3, 5, 4)\n",
-      "size(σ) = (5, 3, 5, 4)\n",
-      "size(logw) = (5, 3, 5, 4)\n",
-      "size(logp_xyz) = (1, 3, 5, 4)\n"
+      "coordinates = zeros(Float32, 3, max_len, B) .+ 0 = Float32[0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0;;; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "14.445448675008686"
+       "15.972348943862457"
       ]
      },
      "metadata": {},
@@ -203,7 +226,34 @@
     }
    ],
    "source": [
-    "loss(model, pad_batch(result[1:4], atom_dict)...)"
+    "loss(model, pad_batch(result)...)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "0ddc697b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coordinates = zeros(Float32, 3, max_len, B) .+ 0 = Float32[0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0;;; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0; 0.0 0.0 0.0 0.0 0.0 0.0]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "15.86637760749771"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "loss(model, pad_batch(result)...)"
    ]
   },
   {
@@ -266,60 +316,6 @@
    "source": [
     "vec(locations[1])"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f83eb198",
-   "metadata": {},
-   "source": [
-    "```julia\n",
-    "function Toy2(dim, depth)\n",
-    "    layers = (;\n",
-    "        loc_rff = RandomFourierFeatures(3 => 64, 0.1f0),\n",
-    "        loc_encoder = Dense(64 => dim, bias=false),\n",
-    "        transformers = [Onion.TransformerBlock(dim, 8) for _ in 1:depth],\n",
-    "        AA_decoder = Dense(dim => 20, bias=false),\n",
-    "    )\n",
-    "    return Toy2(layers)\n",
-    "end\n",
-    "\n",
-    "function (m::Toy2)(locs)\n",
-    "    l = m.layers\n",
-    "    x = l.loc_encoder(l.loc_rff(locs))\n",
-    "    for layer in l.transformers\n",
-    "        x = layer(x, 0, nothing)\n",
-    "    end\n",
-    "    aa_logits = l.AA_decoder(x)\n",
-    "    return aa_logits\n",
-    "end\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "42fac461",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 40,
-   "id": "1de9765a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using NNlib"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c20d6037",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
