its not coord_mask

--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -277,10 +277,10 @@
     "\n",
     "    for i in 1:nbatches\n",
     "        mols = shuffled[i:i+batchsize-1]\n",
-    "        atom_ids, positions, atom_mask, coord_mask = pad_batch(mols, atom_dict, max_len)\n",
+    "        atom_ids, positions, atom_mask, coordinate_mask = pad_batch(mols, atom_dict, max_len)\n",
     "\n",
     "        loss_batch, (grad_model,) = Flux.withgradient(model) do m\n",
-    "            loss(m, atom_ids, positions, atom_mask, coord_mask)\n",
+    "            loss(m, atom_ids, positions, atom_mask, coordinate_mask)\n",
     "        end\n",
     "\n",
     "        Flux.update!(opt_state, model, grad_model)\n",
