--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
    "id": "01404366",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/.julia/dev/MOGMOG.jl`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/MOGMOG.jl-1`\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "id": "36312a2c",
    "metadata": {},
    "outputs": [],
@@ -265,7 +265,7 @@
    "source": [
     "nepochs = 1\n",
     "nbatches = 100\n",
-    "batchsize = 1\n",
+    "batchsize = 16\n",
     "max_len = 32\n",
     "all_losses = []\n",
     "\n",
@@ -574,75 +574,116 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "b06dbad2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/MOGMOG.jl-1`\n"
+     ]
+    },
+    {
+     "ename": "SystemError",
+     "evalue": "SystemError: opening file \"/home/star/MOGMOG.jl-1/Notebook/loss.jl\": No such file or directory",
+     "output_type": "error",
+     "traceback": [
+      "SystemError: opening file \"/home/star/MOGMOG.jl-1/Notebook/loss.jl\": No such file or directory\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] include(fname::String)\n",
+      "   @ Main ./sysimg.jl:38\n",
+      " [2] top-level scope\n",
+      "   @ ~/MOGMOG.jl-1/Notebook/jl_notebook_cell_df34fa98e69747e1a8f8a730347b8e2f_X21sZmlsZQ==.jl:6"
+     ]
+    }
+   ],
    "source": [
-    "###TRAINING loop\n",
+    "using Pkg\n",
+    "Pkg.activate(\"..\")\n",
     "\n",
-    "using Flux, JLD2, StatsBase, Random, Plots\n",
-    "losses_over_time = Float32[]\n",
+    "using Flux, JLD2, Random, Statistics, MOGMOG, Onion, RandomFeatureMaps, Onion.Einops\n",
     "\n",
-    "# Load processed molecules\n",
-    "@load \"processed_molecules.jld2\" result  # Loads `result::Vector{Molecule}`\n",
+    "include(\"loss.jl\")\n",
+    "include(\"MOGhead.jl\")\n",
+    "include(\"MOGfoot.jl\")\n",
+    "include(\"model.jl\")\n",
+    "include(\"utilities.jl\")\n",
     "\n",
-    "# Atom dictionary: atom => integer index\n",
-    "atom_dict = Dict(\"C\"=>1, \"O\"=>2, \"N\"=>3, \"H\"=>4, \"F\"=>5, \"STOP\"=>6)  # Customize this\n",
+    "export logpdf_MOG, MoGAxisHead, MOGMOGModel, transform_molecule, loss\n",
     "\n",
-    "# Model\n",
+    "# Load molecules\n",
+    "@load \"processed_molecules.jld2\" result\n",
+    "\n",
+    "# Atom dictionary\n",
+    "atom_dict = Dict(name => i for (i, name) in enumerate([\"C\", \"F\", \"H\", \"N\", \"O\", \"STOP\"]))\n",
+    "PAD = atom_dict[\"STOP\"]\n",
+    "\n",
+    "# Hyperparameters\n",
     "embed_dim = 64\n",
     "n_components = 5\n",
     "vocab_size = length(atom_dict)\n",
-    "model = MOGMOGModel(embed_dim, n_components, vocab_size)\n",
+    "depth = 4\n",
+    "max_len = 32\n",
+    "batchsize = 4\n",
+    "nbatches = 1000\n",
+    "nepochs = 100\n",
     "\n",
-    "# Optimizer\n",
-    "opt_state = Flux.setup(AdamW(0.001), model)\n",
+    "# Initialize model and optimizer\n",
+    "model = MOGMOGModel(embed_dim, n_components, vocab_size, depth=depth)\n",
+    "opt_state = Flux.setup(AdamW(0.001f0), model)\n",
     "\n",
-    "# Hyperparameters\n",
-    "nepochs = 10 # this is a small dataset, so we can train for more epochs\n",
-    "nbatches = 1000 # Number of batches per epoch\n",
-    "batchsize = 16 # Size of each batch\n",
+    "# Padding function\n",
+    "function pad_batch(mols::Vector{Molecule})\n",
+    "    B = length(mols)\n",
+    "    atom_ids = fill(PAD, max_len, B)\n",
+    "    positions = zeros(Float32, 3, max_len, B)\n",
+    "    atom_mask = zeros(Float32, max_len - 1, B)\n",
+    "    coord_mask = zeros(Float32, max_len - 1, B)\n",
     "\n",
-    "# Training loop\n",
-    "for epoch in 1:nepochs\n",
-    "    @info \"Epoch $epoch\"\n",
-    "    shuffled = shuffle(result)\n",
-    "    total_loss = 0.0\n",
-    "\n",
-    "    for i in 1:nbatches\n",
-    "        mols = shuffled[(i-1)*batchsize+1:min(i*batchsize, end)]\n",
-    "        loss_batch = 0.0\n",
-    "\n",
-    "        grads = Flux.gradient(model) do m\n",
-    "            losses = Float32[]\n",
-    "            for mol in mols\n",
-    "                try\n",
-    "                    l = loss_fn(m, mol, atom_dict)\n",
-    "                    push!(losses, l)\n",
-    "                catch e\n",
-    "                    @warn \"Failed on molecule: $e\"\n",
-    "                end\n",
-    "            end\n",
-    "            loss_batch = mean(losses)\n",
-    "            push!(losses_over_time, loss_batch)\n",
-    "            return loss_batch\n",
+    "    for (i, mol) in enumerate(mols)\n",
+    "        L = min(length(mol.atoms), max_len - 1)\n",
+    "        for j in 1:L\n",
+    "            atom_ids[j, i] = atom_dict[mol.atoms[j]]\n",
+    "            positions[:, j, i] = Float32.(mol.positions[j, :])\n",
+    "            atom_mask[j, i] = 1.0\n",
+    "            coord_mask[j, i] = 1.0\n",
     "        end\n",
-    "\n",
-    "        Flux.update!(opt_state, model, grads[1])\n",
-    "        total_loss += loss_batch\n",
-    "\n",
-    "        if i % 50 == 0\n",
-    "            println(\"Batch $i, loss = $(round(loss_batch, digits=4))\")\n",
-    "        end\n",
+    "        atom_ids[L+1, i] = PAD\n",
     "    end\n",
-    "\n",
-    "    println(\"Epoch $epoch done. Avg loss = $(round(total_loss / nbatches, digits=4))\")\n",
+    "    return atom_ids, positions, atom_mask, coord_mask\n",
     "end\n",
     "\n",
-    "plot(losses_over_time, xlabel=\"Batch\", ylabel=\"Loss\", label=\"Training Loss\", title=\"Final Loss Curve\")\n",
-    "savefig(\"final_loss_curve.png\")\n",
-    "# \n"
+    "# Training loop\n",
+    "all_losses = Float32[]\n",
+    "for epoch in 1:nepochs\n",
+    "    println(\"Epoch $epoch\")\n",
+    "    shuffled = shuffle(result)\n",
+    "\n",
+    "    for i in 1:nbatches\n",
+    "        mols = shuffled[i:i+batchsize-1]\n",
+    "        atom_ids, pos, atom_mask, coord_mask = pad_batch(mols)\n",
+    "\n",
+    "        loss_val, (grad,) = Flux.withgradient(model) do m\n",
+    "            loss(m, atom_ids, pos, atom_mask, coord_mask)\n",
+    "        end\n",
+    "\n",
+    "        Flux.update!(opt_state, model, grad)\n",
+    "        push!(all_losses, loss_val)\n",
+    "\n",
+    "        println(\"Batch $i, loss = $(round(loss_val, digits=4))\")\n",
+    "    end\n",
+    "end\n",
+    "\n",
+    "# Save loss plot\n",
+    "using Plots\n",
+    "plot(all_losses, title=\"Training Loss\", xlabel=\"Batch\", ylabel=\"Loss\")\n",
+    "savefig(\"training_loss.pdf\")\n",
+    "\n",
+    "# Save checkpoint\n",
+    "@save \"mogmodel_checkpoint.jld2\" model all_losses\n"
    ]
   }
  ],
