--- a/Notebook/mogmog.ipynb
+++ b/Notebook/mogmog.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "01404366",
    "metadata": {},
    "outputs": [
@@ -10,7 +10,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/MOGMOG.jl-1`\n"
+      "\u001b[32m\u001b[1m  Activating\u001b[22m\u001b[39m project at `~/.julia/dev/MOGMOG.jl`\n"
      ]
     }
    ],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "36312a2c",
    "metadata": {},
    "outputs": [],
@@ -56,7 +56,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 6,
+   "id": "ae9628e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "atom_dict = Dict(name => i for (i, name) in enumerate([\"C\", \"F\", \"H\", \"N\", \"O\", \"STOP\"]))\n",
+    "PAD = atom_dict[\"STOP\"]\n",
+    "vocab_size = length(atom_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "72416c1a",
    "metadata": {},
    "outputs": [
@@ -84,6 +106,145 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 11,
+   "id": "5a0e4abb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "MOGMOGModel(\n",
+       "  MOGfoot(\n",
+       "    Chain(\n",
+       "      RandomFourierFeatures{Float32, Matrix{Float32}}(Float32[0.2314623 -0.13625263 … -0.2479595 0.20961587; -0.16916199 0.49067017 … 0.29119727 -0.3509817; -0.012262521 0.3708011 … -0.25951022 0.0009883723]),\n",
+       "      Dense(64 => 64),                  \u001b[90m# 4_160 parameters\u001b[39m\n",
+       "    ),\n",
+       "    Embedding(6 => 64),                 \u001b[90m# 384 parameters\u001b[39m\n",
+       "    Chain(\n",
+       "      RandomFourierFeatures{Float32, Matrix{Float32}}(Float32[-2.3652952 -0.23971112 … -2.541039 -6.5408974]),\n",
+       "      Dense(64 => 64),                  \u001b[90m# 4_160 parameters\u001b[39m\n",
+       "    ),\n",
+       "    Chain(\n",
+       "      RandomFourierFeatures{Float32, Matrix{Float32}}(Float32[0.06876705 0.54828066 … -0.4508455 -0.47539788]),\n",
+       "      Dense(64 => 64),                  \u001b[90m# 4_160 parameters\u001b[39m\n",
+       "    ),\n",
+       "    Chain(\n",
+       "      RandomFourierFeatures{Float32, Matrix{Float32}}(Float32[-0.84758604 -0.2448622 … 0.25159508 -0.20555699]),\n",
+       "      Dense(64 => 64),                  \u001b[90m# 4_160 parameters\u001b[39m\n",
+       "    ),\n",
+       "  ),\n",
+       "  [\n",
+       "    DART(\n",
+       "      TransformerBlock(\n",
+       "        Attention(\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          64,\n",
+       "          4,\n",
+       "          4,\n",
+       "          16,\n",
+       "        ),\n",
+       "        StarGLU(\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(256 => 64; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          NNlib.swish,\n",
+       "        ),\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "      ),\n",
+       "    ),\n",
+       "    DART(\n",
+       "      TransformerBlock(\n",
+       "        Attention(\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          64,\n",
+       "          4,\n",
+       "          4,\n",
+       "          16,\n",
+       "        ),\n",
+       "        StarGLU(\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(256 => 64; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          NNlib.swish,\n",
+       "        ),\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "      ),\n",
+       "    ),\n",
+       "    DART(\n",
+       "      TransformerBlock(\n",
+       "        Attention(\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          64,\n",
+       "          4,\n",
+       "          4,\n",
+       "          16,\n",
+       "        ),\n",
+       "        StarGLU(\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(256 => 64; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          NNlib.swish,\n",
+       "        ),\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "      ),\n",
+       "    ),\n",
+       "    DART(\n",
+       "      TransformerBlock(\n",
+       "        Attention(\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          Dense(64 => 64; bias=false),  \u001b[90m# 4_096 parameters\u001b[39m\n",
+       "          64,\n",
+       "          4,\n",
+       "          4,\n",
+       "          16,\n",
+       "        ),\n",
+       "        StarGLU(\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(256 => 64; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          Dense(64 => 256; bias=false),  \u001b[90m# 16_384 parameters\u001b[39m\n",
+       "          NNlib.swish,\n",
+       "        ),\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "        RMSNorm{Float32, Vector{Float32}}(Float32[1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0  …  1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0], 1.0f-5),  \u001b[90m# 64 parameters\u001b[39m\n",
+       "      ),\n",
+       "    ),\n",
+       "  ],\n",
+       "  MoGAxisHead(\n",
+       "    Dense(64 => 5),                     \u001b[90m# 325 parameters\u001b[39m\n",
+       "    Dense(64 => 5, softplus),           \u001b[90m# 325 parameters\u001b[39m\n",
+       "    Dense(64 => 5),                     \u001b[90m# 325 parameters\u001b[39m\n",
+       "  ),\n",
+       "  AtomTypeHead(\n",
+       "    Dense(64 => 6; bias=false),         \u001b[90m# 384 parameters\u001b[39m\n",
+       "  ),\n",
+       ") \u001b[90m        # Total: 52 trainable arrays, \u001b[39m281_039 parameters,\n",
+       "\u001b[90m          # plus 4 non-trainable, 192 parameters, summarysize \u001b[39m1.076 MiB."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "Flux.trainables(model)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "7bdf5f7c",
    "metadata": {},
@@ -99,9 +260,7 @@
     }
    ],
    "source": [
-    "atom_dict = Dict(name => i for (i, name) in enumerate([\"C\", \"F\", \"H\", \"N\", \"O\", \"STOP\"]))\n",
-    "PAD = atom_dict[\"STOP\"]\n",
-    "vocab_size = length(atom_dict)\n",
+    "\n",
     "\n",
     "# Pad function\n",
     "function pad_batch(mols::Vector{Molecule})\n",
