--- a/mogmog.ipynb
+++ b/mogmog.ipynb
@@ -148,7 +148,7 @@
     "    max_len = maximum(length.(mols)) + 1  # Find the maximum length of molecules\n",
     "    B = length(mols)\n",
     "    atom_types = fill(PAD, max_len, B)\n",
-    "    @show coordinates = zeros(Float32, 3, max_len, B) .+ 0\n",
+    "    coordinates = zeros(Float32, 3, max_len, B) .+ 0\n",
     "    atom_type_mask = zeros(Float32, max_len - 1, B)\n",
     "    coordinate_mask = zeros(Float32, max_len - 1, B)\n",
     "\n",
